# ann_power_consumption_data

./: CMakeLists.txt  README.md  instructions.txt  linux_build.sh
include/: CMakeLists.txt  neural_network.hpp
include/data_processing/: CMakeLists.txt  power_consumption.hpp
src/: CMakeLists.txt  main.cpp
src/data_processing/: CMakeLists.txt  power_consumption.cpp
src/neural_network/: CMakeLists.txt  neural_network.cpp
src/neural_network/weights/: weights.json
